[tool.poetry]
name = "lushootseed"
version = "0.1.0"
description = ""
authors = ["Matt Welsh <mdw@mdw.la>"]
packages = [{ include = "lushootseed/" }]

[build-system]
requires = ["poetry>=1.7.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
openai = "^1.30.2"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12"
mypy = "^1.3"
autoflake = "^2.1"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
single_line_exclusions = ["typing", "collections.abc", "typing_extensions"]
skip = ["venv", ".venv", "third_party"]

[tool.black]
extend-exclude = '''
/(
  | fixie/frame/migrations
  | third_party
  | venv
)/
'''